--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-/* The CSS code for the website. */
+
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +8,7 @@
 
 body {
     position: relative;
-    background: #000000;
+    /* background: #000000; */
     height: 4000px;
 }
 
