--- a/style/style.css
+++ b/style/style.css
@@ -8,8 +8,8 @@
 
 body {
     position: relative;
-    /* background: #000000; */
-    height: 4000px;
+    background: #000000;
+    /* height: 4000px; */
 }
 
 
